--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
   "env": {
     "test": {
-      "presets": [["@babel/preset-env", { "modules": "commonjs" }]]
+      "presets": [
+        ["@babel/preset-env", { "modules": "commonjs" }],
+        "@babel/preset-react"
+      ],
+      "plugins": ["@babel/plugin-proposal-class-properties"]
     }
   }
 }
