--- a/package.json
+++ b/package.json
@@ -17,11 +17,22 @@
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "jest": "^24.0.0",
     "nodemon": "^1.18.9",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "./src/__tests__/setup.js"
+    ],
+    "setupFilesAfterEnv": [
+      "./src/__tests__/setup.js"
+    ]
   },
   "dependencies": {
     "express": "^4.16.4",
