--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,8 @@
 {
   "env": {
     "test": {
-      "presets": [
-        ["@babel/preset-env", { "modules": "commonjs" }],
-        "@babel/preset-react"
-      ],
-      "plugins": ["@babel/plugin-proposal-class-properties"]
+      "presets": [["@babel/env", { "modules": "commonjs" }], "@babel/react"],
+      "plugins": ["@babel/proposal-class-properties"]
     }
   }
 }
