--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
   "env": {
     "test": {
-      "presets": [["@babel/env", { "modules": "commonjs" }], "@babel/react"],
+      "presets": [
+        ["@babel/env", { "targets": { "node": "current" } }],
+        "@babel/react"
+      ],
       "plugins": ["@babel/proposal-class-properties"]
     }
   }
