--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server",
     "build": "webpack --mode development",
     "watch": "npm run build -- --watch",
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +32,11 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm t"
+    }
+  },
   "jest": {
     "testPathIgnorePatterns": [
       "./src/__tests__/setup.js"
@@ -42,6 +47,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "husky": "^1.3.1",
     "ip": "^1.1.5",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
