--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.13.0",
@@ -27,9 +28,13 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.0.0",
     "nodemon": "^1.18.9",
-    "webpack": "^4.29.0",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.2",
+    "webpack": "^4.29.4",
     "webpack-cli": "^3.2.1"
   },
   "husky": {
@@ -43,11 +48,13 @@
     ],
     "setupFilesAfterEnv": [
       "./src/__tests__/setup.js"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "dependencies": {
     "express": "^4.16.4",
-    "husky": "^1.3.1",
     "ip": "^1.1.5",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
