--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "./src/__tests__/setup.js"
+      "./src/__tests__/setup.js",
+      "./coverage"
     ],
     "setupFilesAfterEnv": [
       "./src/__tests__/setup.js"
