--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
-    "enzyme": "^3.8.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "get-by-enzyme-id": "^1.0.1",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.0.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.18.9",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.2",
+    "wait-for-expect": "^1.2.0",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.1"
   },
@@ -58,8 +61,8 @@
     "express": "^4.16.4",
     "ip": "^1.1.5",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "socket.io": "^2.2.0"
   }
 }
