--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server",
     "build": "webpack --mode development",
     "watch": "npm run build -- --watch",
-    "test": "jest --verbose"
+    "test": "jest --verbose --coverage"
   },
   "keywords": [],
   "author": "",
