--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     }
   },
   "dependencies": {
+    "chalk": "^4.0.0",
     "express": "^4.16.4",
     "ip": "^1.1.5",
     "prop-types": "^15.6.2",
