--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server",
     "build": "webpack --mode development",
-    "watch": "npm run build -- --watch",
+    "watch": "yarn build --watch",
     "test": "jest --silent --verbose --coverage"
   },
   "keywords": [],
@@ -14,21 +14,20 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@testing-library/react": "^8.0.7",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-helloitsjoe": "^2.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "get-by-enzyme-id": "^1.0.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
@@ -53,7 +52,7 @@
     }
   },
   "dependencies": {
-    "chalk": "^4.0.0",
+    "chalk": "^4",
     "express": "^4.16.4",
     "ip": "^1.1.5",
     "prop-types": "^15.6.2",
