--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.8.0",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@testing-library/react": "^8.0.7",
+    "@testing-library/react": "^12.1.2",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "eslint": "^7.5.0",
@@ -30,11 +30,10 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
+    "jest": "^27.4.5",
     "nodemon": "^1.18.9",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.2",
-    "wait-for-expect": "^1.2.0",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.3.11",
     "webpack-simple": "^1.7.8"
@@ -50,7 +49,8 @@
     ],
     "moduleNameMapper": {
       "\\.(css|less)$": "identity-obj-proxy"
-    }
+    },
+    "testEnvironment": "jsdom"
   },
   "dependencies": {
     "chalk": "^4",
