--- a/package.json
+++ b/package.json
@@ -4,39 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server",
-    "build": "webpack --mode development",
-    "watch": "yarn build --watch",
-    "test": "jest --verbose --coverage"
+    "test": "jest",
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch",
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@testing-library/react": "^12.1.2",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "@babel/core": "^7.13.10",
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.22.0",
     "eslint-config-helloitsjoe": "^2.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^1.3.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.5",
-    "nodemon": "^1.18.9",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.2",
-    "webpack": "^4.29.4",
-    "webpack-cli": "^3.3.11",
-    "webpack-simple": "^1.7.8"
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.0.6",
+    "prettier": "^2.2.1",
+    "webpack": "^5.25.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-simple": "^1.7.3"
   },
   "husky": {
     "hooks": {
@@ -53,14 +51,13 @@
     "testEnvironment": "jsdom"
   },
   "dependencies": {
-    "chalk": "^4",
-    "express": "^4.16.4",
     "firebase": "^9.6.1",
-    "ip": "^1.1.5",
-    "prop-types": "^15.6.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "socket.io": "^2.4.1",
-    "swr": "^1.1.2"
+    "jest-simple-config": "^0.4.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5"
   }
 }
