--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +30,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "jest": "^27.0.6",
     "prettier": "^2.2.1",
     "webpack": "^5.25.0",
