--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-      - uses: c-hive/gha-yarn-cache@v1
+          cache: yarn
       - run: yarn
       - run: yarn test
       - uses: helloitsjoe/deploy-github-pages@v1
