--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "start": "webpack serve",
+    "dev": "webpack serve",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -35,7 +35,7 @@
     "prettier": "^2.2.1",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^4.7.4",
     "webpack-simple": "^1.7.3"
   },
   "dependencies": {
