--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
+    "lint": "eslint .",
+    "format": "prettier --write src",
     "dev": "webpack serve",
     "prepare": "husky install"
   },
