--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "prettier": "^2.2.1",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.7.4",
-    "webpack-simple": "^1.7.3"
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "firebase": "^9.6.1",
